Chage TXT Source To SQL

--- a/WordFinder.Data/WordFinder.Data.csproj
+++ b/WordFinder.Data/WordFinder.Data.csproj
@@ -1,13 +1,12 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
-    <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <Nullable>enable</Nullable>
   </PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
 		<PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="6.0.1" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.1" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.1">
@@ -21,13 +20,4 @@
 		</PackageReference>
 	</ItemGroup>
 	
-  <ItemGroup>
-    <None Include="..\.editorconfig" Link=".editorconfig" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\WordFinder.Core\WordFinder.Core.csproj" />
-    <ProjectReference Include="..\WordFinder.Data\WordFinder.Data.csproj" />
-  </ItemGroup>
-
 </Project>
