--- a/WordFinder.Core/WordFinder.Core.csproj
+++ b/WordFinder.Core/WordFinder.Core.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\WordFinder.Data\WordFinder.Data.csproj" />
+  </ItemGroup>
+
 </Project>
