--- a/WordFinder.Web/appsettings.json
+++ b/WordFinder.Web/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStringConfig": {
+    "ConnectionString": "Data Source =LAPTOP-VIV37RCJ\\SQLSERVER2019;Initial Catalog=WordFinderDB;Integrated Security=true"
+  }
 }
