Delete Som Files

--- a/WordFinder.Web/appsettings.json
+++ b/WordFinder.Web/appsettings.json
@@ -5,8 +5,5 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*",
-  "ConnectionStringConfig": {
-    "ConnectionString": "Data Source =LAPTOP-VIV37RCJ\\SQLSERVER2019;Initial Catalog=WordFinderDB;Integrated Security=true"
-  }
+  "AllowedHosts": "*"
 }
